--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>AirBnB Clone</title>
+		<title>AirBnB clone</title>
 		<link rel="stylesheet" href="styles/reset.css">
 		<link rel="stylesheet" href="styles/3-common.css">
 		<link rel="stylesheet" href="styles/3-header.css">
